--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,16 @@
   width: 400px;
   height: 300px;
 }
+
+.likeButton {
+  display: inline-block;
+  border: none;
+  margin: 0;
+  text-decoration: none;
+  background: transparent;
+  font-family: sans-serif;
+  font-size: 1rem;
+  text-decoration: red;
+  cursor: pointer;
+  text-align: center;
+}
