--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+html,
+body,
+#root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overscroll-behavior-y: none;
+}
+
 .spacestagramTitle {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 50px;
@@ -5,31 +14,65 @@
   text-align: center;
   color: #333;
   background-color: #fff;
+  text-transform: uppercase;
+}
+
+.mainWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 1rem;
+}
+
+.cardWrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+
+  margin: 3rem 0.8rem;
+  flex-grow: 1;
+  flex-shrink: 1;
 }
 
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width: 600px;
-  margin: 10px auto;
+  margin: 0.6rem;
+  max-width: 300px;
   text-align: center;
   font-family: arial;
-  padding: 20px;
+  width: 100%;
+  border-radius: 12px;
 }
 
 .imageVideoSize {
-  width: 400px;
-  height: 300px;
+  width: 100%;
+  height: 220px;
+  margin: auto;
+  object-fit: cover;
+
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+}
+
+.dateOfCapture {
+  font-size: 12px;
+  color: #666;
+  margin-top: 0.5rem;
+}
+
+.explanation {
+  padding: 1rem;
 }
 
 .likeButton {
   display: inline-block;
-  border: none;
-  margin: 0;
-  text-decoration: none;
-  background: transparent;
   font-family: sans-serif;
   font-size: 1rem;
-  text-decoration: red;
-  cursor: pointer;
   text-align: center;
+  text-decoration: none;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+  padding: 0.5rem;
 }
