--- a/src/index.css
+++ b/src/index.css
@@ -5,16 +5,7 @@ body,
   margin: 0;
   padding: 0;
   overscroll-behavior-y: none;
-}
-
-.spacestagramTitle {
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-size: 50px;
-  line-height: 1.42857143;
-  text-align: center;
-  color: #333;
-  background-color: #fff;
-  text-transform: uppercase;
+  color: rgb(65, 64, 64);
 }
 
 .mainWrapper {
@@ -22,15 +13,20 @@ body,
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 1rem;
+}
+
+.spacestagramTitle {
+  font-family: sans-serif;
+  font-size: 1.8rem;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .cardWrapper {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 10px;
-
-  margin: 3rem 0.8rem;
+  margin: 1.5rem 0.8rem 4rem 0.8rem;
   flex-grow: 1;
   flex-shrink: 1;
 }
