--- a/src/index.css
+++ b/src/index.css
@@ -1,28 +1,34 @@
 html,
 body,
 #root {
+  width: 100vw;
   height: 100%;
+  background-color: #fff;
   margin: 0;
   padding: 0;
-  overscroll-behavior-y: none;
   color: rgb(65, 64, 64);
+  font-family: sans-serif;
 }
 
-.mainWrapper {
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.main-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.spacestagramTitle {
-  font-family: sans-serif;
+.spacestagram-title {
   font-size: 1.8rem;
   text-align: center;
   text-transform: uppercase;
 }
 
-.cardWrapper {
+.card-wrapper {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 10px;
@@ -39,31 +45,50 @@ body,
   font-family: arial;
   width: 100%;
   border-radius: 12px;
+  transition: 0.1s transform ease-out;
 }
 
-.imageVideoSize {
+.card:hover {
+  transform: scale(1.02);
+}
+
+.media {
   width: 100%;
   height: 220px;
   margin: auto;
   object-fit: cover;
-
   border-top-left-radius: 12px;
   border-top-right-radius: 12px;
+  border: 0;
 }
 
-.dateOfCapture {
-  font-size: 12px;
-  color: #666;
-  margin-top: 0.5rem;
+.title-explanation-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.picture-of-the-day-title {
+  font-size: 1.2rem;
+  height: 2em;
+  margin: 0.5rem 0;
 }
 
 .explanation {
-  padding: 1rem;
+  padding: 0 1rem;
 }
 
-.likeButton {
+.like-and-date-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem 1rem;
+}
+
+.like-button {
   display: inline-block;
-  font-family: sans-serif;
   font-size: 1rem;
   text-align: center;
   text-decoration: none;
@@ -71,4 +96,11 @@ body,
   background: transparent;
   cursor: pointer;
   padding: 0.5rem;
+  line-height: 0;
+}
+
+.date-of-capture {
+  font-size: 12px;
+  color: #666;
+  margin-top: 0.5rem;
 }
