--- a/src/index.css
+++ b/src/index.css
@@ -70,9 +70,12 @@ a {
 }
 
 .picture-of-the-day-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 1.2rem;
   height: 2em;
-  margin: 0.5rem 0;
+  margin: 0.5rem;
 }
 
 .explanation {
