--- a/src/index.css
+++ b/src/index.css
@@ -108,11 +108,46 @@ a {
   border-radius: 50%;
   color: rgb(237, 73, 86);
 }
+
 .like-button svg {
   margin-bottom: -2px;
 }
+
 .date-of-capture {
   font-size: 12px;
   color: #666;
   margin-top: 0.5rem;
+}
+
+.modal-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(156, 154, 154, 0.1);
+  z-index: -1;
+  opacity: 0;
+}
+
+.isOpen .modal-container {
+  z-index: 999;
+  opacity: 1;
+}
+
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50vw;
+  height: 90vh;
+  background-color: #fff;
+  border-radius: 12px;
+  box-shadow: 0 4px 8px 0 rgba(104, 103, 103, 0.2);
+  overflow: hidden;
 }
