--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,13 @@ a {
   text-transform: uppercase;
 }
 
+.attribution {
+  font-size: 0.8rem;
+  text-align: center;
+  color: #666;
+  padding: 0 1rem;
+}
+
 .card-wrapper {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
