--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,27 @@ a {
   transform: scale(1.02);
 }
 
+.modal-figure {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  margin: 0;
+}
+
+iframe {
+  flex-shrink: 0;
+  border-radius: 12px;
+  margin: 1rem 0;
+}
+
+figcaption {
+  display: flex;
+  flex-direction: column;
+  height: 40%;
+}
+
 .media {
   width: 100%;
   height: 220px;
@@ -67,6 +88,12 @@ a {
   border-top-left-radius: 12px;
   border-top-right-radius: 12px;
   border: 0;
+}
+
+.modal-content .media {
+  margin: 0;
+  height: 60%;
+  flex-shrink: 0;
 }
 
 .title-explanation-wrapper {
@@ -88,6 +115,12 @@ a {
 .explanation {
   font-size: 14px;
   padding: 0 1rem;
+}
+
+.modal-content .explanation {
+  font-size: 0.9rem;
+  padding: 1rem 1.5rem;
+  overflow: auto;
 }
 
 .like-and-date-wrapper {
@@ -136,9 +169,8 @@ a {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(156, 154, 154, 0.1);
-  z-index: -1;
-  opacity: 0;
+  background-color: rgba(143, 140, 140, 0.5);
+  z-index: 1;
 }
 
 .isOpen .modal-container {
@@ -151,11 +183,10 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 50vw;
-  height: 90vh;
+  width: 45vw;
+  max-height: 90vh;
   background-color: #fff;
   border-radius: 12px;
-  box-shadow: 0 4px 8px 0 rgba(104, 103, 103, 0.2);
   overflow: hidden;
 }
 
