--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,49 @@ a {
   padding: 0 1rem;
 }
 
+.navbar-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 1rem;
+  width: 100%;
+  position: relative;
+}
+
+.home-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  right: 6rem;
+  position: absolute;
+  background-color: transparent;
+  color: rgb(122, 121, 121);
+  padding: 0.6rem;
+  border: none;
+  cursor: pointer;
+}
+
+.home-button:hover {
+  color: rgb(65, 64, 64);
+}
+
+.liked-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  right: 3rem;
+  position: absolute;
+  background-color: transparent;
+  color: rgb(122, 121, 121);
+  padding: 0.7rem;
+  border: none;
+  cursor: pointer;
+}
+
+.liked-button:hover {
+  color: rgb(65, 64, 64);
+}
+
 .card-wrapper {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
