move attribution to app.tsx + center it

--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,9 @@ a {
 }
 
 .attribution {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 0.8rem;
   text-align: center;
   color: #666;
