--- a/src/index.css
+++ b/src/index.css
@@ -87,6 +87,15 @@ a {
   color: rgb(65, 64, 64);
 }
 
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  margin-top: 1rem;
+}
+
 .card-wrapper {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
