--- a/src/index.css
+++ b/src/index.css
@@ -318,3 +318,41 @@ figcaption {
 .social-media:hover {
   color: rgb(184, 178, 247);
 }
+
+@media screen and (max-width: 800px) {
+  .spacestagram-title {
+    font-size: 1.2rem;
+    padding-top: 1rem;
+    text-align: start;
+  }
+
+  .attribution {
+    margin-top: 1.2rem;
+  }
+
+  .liked-button {
+    right: 3.5rem;
+    margin-top: 1rem;
+  }
+
+  .navbar-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding-left: 1.5rem;
+  }
+
+  .card-wrapper {
+    grid-template-columns: 1fr;
+  }
+
+  .liked-button {
+    right: 3.5rem;
+    margin-top: 1rem;
+  }
+
+  .home-button {
+    right: 6rem;
+    margin-top: 1rem;
+  }
+}
