--- a/src/index.css
+++ b/src/index.css
@@ -223,7 +223,7 @@ figcaption {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 0.5rem 1rem;
+  padding: 0 1rem 0.5rem 1rem;
 }
 
 .like-button {
@@ -246,6 +246,34 @@ figcaption {
 
 .like-button svg {
   margin-bottom: -2px;
+}
+
+.share-button {
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+  padding: 0.4rem;
+  line-height: 0;
+}
+
+.share-button:hover {
+  background-color: rgba(214, 146, 241, 0.1);
+  border-radius: 50%;
+  color: rgb(175, 94, 207);
+}
+
+.share-button svg {
+  margin-bottom: -2px;
+}
+
+.copy-success-message {
+  font-size: 0.8rem;
+  color: rgb(109, 66, 158);
+  margin: 0 0.5rem;
+  min-height: 15px;
 }
 
 .date-of-capture {
