--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body,
   padding: 0;
   color: rgb(65, 64, 64);
   font-family: sans-serif;
+  overflow-x: hidden;
 }
 
 a {
@@ -224,6 +225,7 @@ figcaption {
   justify-content: space-between;
   align-items: center;
   padding: 0 1rem 0.5rem 1rem;
+  margin-top: auto;
 }
 
 .like-button {
@@ -306,7 +308,7 @@ figcaption {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 45vw;
+  width: 60vw;
   max-height: 90vh;
   background-color: #fff;
   border-radius: 12px;
@@ -399,5 +401,10 @@ figcaption {
   .home-button {
     right: 6rem;
     margin-top: 1rem;
+  }
+
+  .modal-content {
+    width: 90vw;
+    max-height: 80vh;
   }
 }
