--- a/src/index.css
+++ b/src/index.css
@@ -271,6 +271,30 @@ figcaption {
   margin-bottom: -2px;
 }
 
+.tooltip {
+  position: absolute;
+  display: inline-block;
+  border-radius: 2px;
+  padding: 0.2rem;
+  font-size: 0.8rem;
+  color: #fff;
+  background-color: rgba(155, 154, 154, 0.9);
+  text-align: center;
+  transition: all 0.2s ease-in-out;
+}
+
+.tooltip-modal {
+  position: absolute;
+  display: inline-block;
+  border-radius: 2px;
+  padding: 0.2rem;
+  font-size: 0.8rem;
+  color: #fff;
+  text-align: center;
+  transition: all 0.2s ease-in-out;
+  background-color: rgba(0, 0, 0, 1);
+}
+
 .copy-success-message {
   font-size: 0.8rem;
   color: rgb(109, 66, 158);
