--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,19 @@
+.mainWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.cardWrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+  margin: 1.5rem 0.8rem 4rem 0.8rem;
+  flex-grow: 1;
+  flex-shrink: 1;
+}
+
 .LoadMoreButton {
   display: flex;
   justify-content: center;
