use context, css fixup

--- a/styles/Modal.module.css
+++ b/styles/Modal.module.css
@@ -53,6 +53,12 @@
   flex-shrink: 0;
 }
 
+.modalContent figcaption {
+  display: flex;
+  flex-direction: column;
+  height: 40%;
+}
+
 .sourceLinkWrapper {
   display: flex;
   justify-content: flex-end;
