--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -7,6 +7,15 @@
   position: relative;
 }
 
+@media screen and (max-width: 800px) {
+  .navbarWrapper {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding-left: 1.5rem;
+  }
+}
+
 .spacestagramTitle {
   display: block;
   margin-top: 0.67em;
@@ -17,6 +26,14 @@
   font-size: 1.8rem;
   text-align: center;
   text-transform: uppercase;
+}
+
+@media screen and (max-width: 800px) {
+  .spacestagramTitle {
+    font-size: 1.2rem;
+    padding-top: 1rem;
+    text-align: start;
+  }
 }
 
 .navitem {
@@ -58,6 +75,13 @@
   color: rgb(65, 64, 64);
 }
 
+@media screen and (max-width: 800px) {
+  .homeButton {
+    right: 6rem;
+    margin-top: 1rem;
+  }
+}
+
 .likedButton {
   right: 5rem;
   padding: 0.7rem;
@@ -65,4 +89,11 @@
 
 .likedButton:hover {
   color: rgb(65, 64, 64);
+}
+
+@media screen and (max-width: 800px) {
+  .likedButton {
+    right: 3.5rem;
+    margin-top: 1rem;
+  }
 }
