--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -14,6 +14,12 @@
   flex-shrink: 1;
 }
 
+@media screen and (max-width: 800px) {
+  .cardWrapper {
+    grid-template-columns: 1fr;
+  }
+}
+
 .LoadMoreButton {
   display: flex;
   justify-content: center;
